--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,37 @@
 ---
 
 @import "{{ site.theme }}";
+
+// Collapsible details styling
+details {
+  margin-bottom: 0;
+  margin-top: 0;
+  
+  summary {
+    color: white !important;
+    font-weight: bold;
+    padding: 0.15rem 0;
+    line-height: 0.8;
+  }
+    
+  // Bullets inside details
+  ul {
+    margin: 0.1rem 0 0.2rem 0 !important;
+    padding-left: 0 !important;
+  }
+  
+  ul li {
+    position: relative !important;
+    padding-left: 1rem !important;
+    margin: 0.2rem 0 !important;
+    line-height: 1.3 !important;
+  }
+  
+  ul li::before {
+    content: "•" !important;
+    position: absolute !important;
+    left: 0 !important;
+    display: inline !important;
+    color: inherit !important;
+  }
+}
